# llm-slop

./: .gitignore  BUILD  MODULE.bazel  requirements.in  requirements_lock.txt
src/: BUILD  generic_model.py  main.py  ollama_provider.py
test/: test.yaml
