"""
Uchen core - ML framework
"""
module(name = "llm-slop", version = "0.1", compatibility_level = 1)

bazel_dep(name = "rules_python", version = "1.1.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # We can specify the exact version.
    python_version = "3.12.3",
)

# You can use this repo mapping to ensure that your BUILD.bazel files don't need
# to be updated when the python version changes to a different `3.9` version.
use_repo(
    python,
    python_3_12 = "python_3_12_3",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pypi",
    python_version = "3.12.3",
    requirements_lock = "//:requirements_lock.txt",
    requirements_windows = "//:requirements_lock_windows.txt",
)
use_repo(pip, "pypi")

bazel_dep(name = "abseil-py", version = "2.1.0")